httpService tests & removing of okHttp and httpClient tests